2010-06-24
Worked on movies tools
Worked on torservices
	Mostly complete aside from testing
Added validates option to module configuration
	Modules can now validate many variables using one standard function

2010-06-23
Fixed a bunch of bugs when adding files to the database
Fixed bugs in reading settings files, was not properly parsing boolean values
Finished movie netflix checker script
Improved speed by checking if a module handles the file type before looking for the ID
	This makes it crucial that handles functions not use the database

2010-06-21
Worked on movies tool
Changed settings to use include/settings.php and urlencoded all of the settings to prevent security issues
Updated a lot of modules default theme functionality
Converted all uses of $_SESSION over to the new session API
Finished movie netflix checker script

2010-06-18
Created and implemented generic_validate functions for things like numbers and boolean values

2010-06-17
Worked on movies tool
	Finished netflix checker
Abstracted nzb configuration from television into a new module

2010-06-16
Finished NZB downloader in television
Removed snoopy from system
	Now uses curl and a common fetch() function
Fixed some bugs in Balancer
	It was not removing entires when saved because it was not printing out an empty field
Fixed bugs in session() function in core.php
	Was overwriting session information even if the function returned NULL
	It should only replace session save if there is something to be saved
Fixed ampache.php, was not getting IDs properly
Fixed ids.php, it was returning in the get_ids() function when it should have been creating new IDs
Fixed encode, was not using new API for get_files()
Fixed admin_modules
	Was not saving when a setting was removed or reset
Fixed conver.php not using new API

2010-06-15
Worked a lot on the television tool, and enhancing the API
Worked on Balancer
	Now performs redirects in the session_balancer() function
Worked on tools

2010-06-08