@@ -1,0 +1,95 @@
+;<?php die(); ?>
+db_connect = "mysql%3A%2F%2Fmedia%3AeVi0FIWJIZVLPwiB%40localhost%2Fmediaserver"
+amazon_enable = "false"
+webdav_enable = "false"
+bt_enable = "false"
+nzbpath = "%2Fhome%2Fshare%2FDownloads%2F"
+torpath = "%2Fhome%2Fshare%2FDownloads%2F"
+netflix_xml = "P1010978834764711868669024398667743"
+debug_mode = "true"
+recursive_get = "true"
+verbose = "true"
+seeder_path = "%2Fusr%2Fbin%2Fvlc"
+seeder_args = "%2Fusr%2Fbin%2Fvlc"
+movie_folder_0 = "%2Fhome%2Fshare%2FMovies%2F"
+movie_folder_1 = "%2Fhome%2Fshare%2FDownloads%2FDownloaded+Movies%2F"
+db_secret = "ynfB67rUWCKYIqKe"
+nzb_television_search_0 = "http%3A%2F%2Fnzbmatrix.com%2Fnzb-search.php%3Fcat%3D6%26search%3D%25s%25%2520s%2502de%2502d"
+nzb_television_search_1 = "http%3A%2F%2Fwww.newzbin.com%2Fsearch%2Fquery%2F%3Fsearchaction%3DGo%26category%3D8%26q%3D%25s%25%2520%25dx%2502d"
+tor_television_search_0 = ""
+tor_television_search_1 = ""
+tor_television_search_2 = "http%3A%2F%2Ftvtorrents.com%2Floggedin%2Fsearch.do%3Fsearch%3D%25s+%25d+%2502d"
+
+[myepisodes]
+username = "bjcullinan"
+password = "Y7hZ2yMqQ2wQV66VrE5pt"
+
+[nzbservice_0]
+name = "NZB+Matrix"
+match = "%2F%3Ca+href%3D%22%28http%3A%5C%2F%5C%2Fnzbmatrix.com%5C%2Fnzb-download.php%3F%5B%5E%22%5D%2A%3F%26amp%3Bnozip%3D1%29%22%2Fi"
+search = "http%3A%2F%2Fnzbmatrix.com%2Fnzb-search.php%3Fsearch%3D%25s"
+image = "data%3A%3Bbase64%2CAAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2Ffz7FcSahtejW0jtrHZw0Munn5zi0Mxk9O7sMPz7%2Bgr%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FANzOxJy2elX%2FvXJP%2F5tDMP%2BZQy3%2Fl0Qy%2F5xKPf%2BrbGPeyrKrn%2Fz8%2FAb%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAPfy7z%2Bze1%2F%2Ft35f%2F7SEYv%2BtX0T%2FnkQx%2F6JINP%2BiSDT%2Fo0Ut%2F5pHLv%2FUvrqF%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP39%2FQbLp5LQuHpZ%2F7p%2FYP%2B4gGD%2FvHxf%2F55MOv%2BeRjT%2Fn0g0%2F59JM%2F%2BmSDH%2Fmkw4%2Bvbu6zr%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwDp3dN1uHhZ%2F7t%2FX%2F%2B6f1%2F%2FuX5e%2F72BY%2F%2Bza1P%2Fm0cy%2F59INP%2BdSDT%2Fokkz%2F5xCLf%2BndmvX%2Ffv7DP%2F%2F%2FwD69%2FQktodu8L99Wv%2B6f1%2F%2Fun9f%2F7p%2FX%2F%2B6f1%2F%2Fv4Ji%2F6ZaQP%2BbRzL%2FnUk1%2F55JM%2F%2BiSDX%2Fk0Av%2F9azrJH%2F%2F%2F8A172vq792Wf%2B1gF%2F%2FuX9f%2F7p%2FX%2F%2B6f1%2F%2Ft4Bd%2F7iDXv%2B%2Bd1v%2FnEk1%2F55JN%2F%2BhSzb%2Foks3%2F6FINP%2BSRTH%2F8urmRuXWyX66eVj%2FtIBd%2F7p%2FX%2F%2B6f1%2F%2Fun9f%2F7eAXf%2B9hWL%2FrlhG%2F4kjGv%2BPKiD%2FkzEn%2F5Q2K%2F%2BYPDH%2FnT4w%2F6RtX978%2B%2FsHu5eG07p8V%2F%2B6f1%2F%2Fun9f%2F7p%2FX%2F%2B8gmH%2Fu3Vb%2F4kpHv%2BHHBf%2Fhh8Y%2F4gdF%2F%2BIGxX%2FiR4X%2F4UYEf%2Bnbmm%2F%2F%2F%2F%2FAOnj4EKqdFn%2Fun5e%2F7t%2FYP%2B6gGD%2FwYNl%2F51FNv%2BFGhb%2FjB8c%2F4YgGv%2BMHxv%2FkB0b%2F4kcF%2F%2BFMS%2Fu%2BPHxJP%2F%2F%2FwD%2F%2F%2F8Azrivo7Z6Wf%2B6gF7%2FvYRj%2F65mTv%2BEHxj%2Fjxwc%2F40eHf%2BGIBr%2FiB8c%2F40eG%2F93FxP%2F5tDOYv%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAPr49hm9jnLquoFZ%2F7l9YP%2BSMSr%2FhRwY%2F4kfG%2F%2BJIBv%2FiB8b%2F4gfG%2F%2BBEw%2F%2FvYyMrv%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A7eDZZ7t6YP%2BmTTn%2FgBYP%2F4kcEv%2BJHBL%2FiRwS%2F4obE%2F%2BNEw%2F%2FjUA96fv4%2BBn%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP39%2FQHYu7WjrGJfz6pfXs%2BoX13PqF9dz6hfXc%2BoX1zPpmFgyvHi4kz%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F%2F%2FAP%2F%2F%2FwD%2F%2F%2F8A%2F%2F8AAPD%2FAADgDwAA4AcAAMAHAADAAwAAgAEAAAABAACAAAAAgAAAAMABAADAAwAA4AMAAPAHAADwDwAA%2F%2F8AAA%3D%3D"
+login = "http%3A%2F%2Fnzbmatrix.com%2Faccount-login.php"
+username = "bjcullinan"
+password = "daddy123"
+userfield = ""
+passfield = ""
+loginfail = ""
+
+[nzbservice_1]
+name = "Newzbin"
+match = "%2F%3Ca.%2A%3Fhref%3D%22%28%5C%2Fbrowse%5C%2Fpost%5C%2F%5B0-9%5D%2A%3F%5C%2Fnzb%29%22%3E%2Fi"
+search = "http%3A%2F%2Fwww.newzbin.com%2Fsearch%2Fquery%2F%3Fsearchaction%3DGo%26q%3D%25s"
+image = "data%3A%3Bbase64%2CAAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAQAQAAAAAAAAAAAAAAAAAAAAAAADTq2YA2bFsAPrlyAD%2F7dkA%2FuzXAP7s2QD%2F6ccs%2Bd2ju8CeY8LYql4z5bZmAO68aQD9yXEA%2Fc91AP3VeAD913oA06tmANmxbAD65cgA%2F%2B3ZAP7s1x7%2B7dyT%2FuGm%2BvbRgvfHoWT12Ktd%2F%2BS0ZJ%2FuvWoY%2FMlxAP3PdQD91XgA%2Fdd6ANOrZgDZsWwA%2BubJAP%2Ft2QD%2B7Neq%2Fu3c%2F%2F%2FgqP%2Fvx3bfvZZR2tuwaebnvHTu7rtk9vvIcHT9z3UH%2FdV4AP3XegDUrGgL2K9pRfPbuKD%2F7tsk%2FuzXAP7t2lX%2B3KHg9s2C8ceiY%2FLUqF6p89izAfXSm5z4xW%2F%2F%2Fs503P3VeEn913oL06xpktSrZP%2Fr0Kjq%2F%2B%2Fd8f7t2YT958sA%2BMt%2Bl%2FPJgfPGoWTizqJW9eO%2BgmD54sMA9cyKJvbDbcX9z3X%2F%2FdN3kM2nZp7OpmL%2F68%2Bp5P%2Fu3Lb%2B7Nfa%2F%2B7bdPTQlaPitmvqto9N2M%2BnY%2FrWqmH%2F4bZu1ei5ay%2FNolg7%2Bsdw%2F%2F%2FMc57HomKex6Be%2F%2BnOquD%2F7dv%2F%2F%2BrWv%2F%2Fx4T3v0Z%2Bj2K1i666IR%2BLPrHKq2bN2KNaoWs%2FhsmT%2F37Fjyu%2B%2Bav%2F1wm2bwJxfoMCaW%2F%2FnzKhf%2F%2B3bLv7p1a744MWE37p91M6lYeGif0TZuZJP4cadVyXInlgAyZ9XuuCyZP%2FismD%2F5rVimrmXXJ64lFf%2F5s%2BvwPHYuifPrHOLzKZn%2F86pa%2Bnhv4S40LF7rreVXuK6klD%2FwplVjcGXUrnbs3H%2F7s6e%2F%2BW9fpezkVmds5FX%2F8yugP%2FCn2b9wJ1g%2F82mZtHrxX%2FV%2F9yO%2FP%2FdjvrrxoHTv5lXuLiSUe%2FBmVP%2F0q1v%2F%2F%2Fv4f%2F%2F7NyKrYxWna%2BOV%2F%2BzkVn%2F0bSK7%2BXDkOL2yoD%2F%2FtKE%2F%2Fjbrsb%2F6My6%2F92e%2BPfLf%2FnSqmjRtpBPwcKgaO%2F%2F8OD%2F%2F%2B7eiqOEUJWkhE7twKFv9vTdxNbt0awF9NCWfvjOiPTxxn%2F18dKo%2FPjgyJrrwn4s5b16xMqlZe%2B7m2fh9N3H%2F%2F%2Fr2oOTeEwYl31RXbKTX%2BbFo2n%2Fw59hpcqocA744MRu%2Btmo%2F%2BzCevvgunntx6JjWfHXtmjy2Lr%2Fupxt45mAVmmdh2UUkHdOAJN7UgCqjV0PuZlje8ela%2FTIo2T517eH2ffhytT64sjJ3Ll%2F%2F8%2BrbP%2FJqXj%2F7da8c822lQSMc0kAgm1HAJF4TgCUe1IAqo1dALaXYwC8m2YUwaBphcOgZvTHpGz5zq9%2F9cOia%2F%2B9nWa3tZRdLsmsgADQt5YAjnVLAIdyTACReE4AlHtSAKqNXQC3mGMAvZxmALycZgC4mGQXspNfja2PW9ixk2BUtpdjALaWYADMsIUA0LeWAI51SwCHckwA%2FD%2F%2F%2F%2FAP%2F%2F%2FwA%2F%2F%2FCAD%2F%2FwQQ%2F%2F8AAP%2F%2FAAD%2F%2FwAQ%2F%2F8AAP%2F%2FAAD%2F%2FwAA%2F%2F8AAP%2F%2FAAD%2F%2F8AD%2F%2F%2FwD%2F%2F%2F%2FD%2F%2F%2Fw%3D%3D"
+login = "http%3A%2F%2Fwww.newzbin.com%2Faccount%2Flogin%2F"
+username = "bjcullinan"
+password = "daddy123"
+userfield = ""
+passfield = ""
+loginfail = ""
+
+[balance_server_0]
+protocol = "http"
+address = "192.168.1.102%2Fmediaserver%2F"
+username = "admin"
+password = "tmppass"
+nickname = "Giediprime"
+
+[torservice_0]
+name = "What.CD"
+match = "%2F%3Ca+href%3D%22%28torrents.php%3Faction%3Ddownload%5B%5E%22%5D%2A%3F%29%22%2Fi"
+search = ""
+image = "data%3A%3Bbase64%2CAAABAAEAEBAAAAAAAABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAAAAAAAAAAAAAAAEAAAAAAAAAAAAA8vLyANDQ0ADZ2dkA4uLiAOPi4gC3t7cA3%2BDfAOjp6ADV1NUA0tLSAN7d3gCwsLAA5OTkAMLCwgDm5uYAwcLBANXW1gDW1tYA6%2BrrAN%2Ff3wDx8fEA29rbAL%2B%2FvwDb2toAuLi4AOzs7ADt7OwAsbGxAOTl5QDt7u4A7u7uANTV1QDd3t4A5%2BfnAO7u7QCsrKwA1dXUAOnp6QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAcJCQkJAAAJCQkJBwAAAAcBgIgJSQAACQSEgoZHAAAJAkDAwMkAAAkGBYYESQAACQhCyQkJAAAJCQkFAckAAAkBAUXAAAAAAAAFw0dJAAAJCIiJCQkAAAkJCQmJiQAACQPGxsbJAAAJCMeHwgkAAAMEBMVFSQAACQBARoODAAAAAwkJCQkAAAkJCQkDAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP%2F%2FAAD%2F%2FwAA%2F%2F8AAMGDAACBgQAAgYEAAIGBAACH4QAAgYEAAIGBAACBgQAAwYMAAP%2F%2FAAD%2F%2FwAA%2F%2F8AAP%2F%2FAAA%3D"
+login = "http%3A%2F%2Fwhat.cd%2Flogin.php"
+username = "wisemaster"
+password = "daddy123"
+userfield = ""
+passfield = ""
+loginfail = ""
+exclude = ""
+
+[torservice_1]
+name = "Waffles.FM"
+match = "%2F%3Ca+href%3D%22%28%5C%2Fdownload.php%5C%2F%5B%5E%22%5D%2A%3F%29%22%2Fi"
+search = ""
+image = "data%3A%3Bbase64%2CAAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAAAABMLAAATCwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAvb2%2B%2F729vv%2B9vb7%2Fvb2%2B%2F729vv%2B9vb7%2Fvb2%2B%2F729vv%2B9vb7%2Fvb2%2B%2F729vv%2B9vb7%2FAAAAAAAAAAAAAAAAvb2%2B%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F729vv8AAAAAAAAAAL29vv%2F%2F%2F%2F%2F%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F%2F%2F%2F%2F%2F%2B9vb7%2FAAAAAAAAAAC9vb7%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2Fvb2%2B%2FwAAAAAAAAAAvb2%2B%2F%2F%2F%2F%2F%2F96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2F%2F%2F%2F%2F%2F729vv8AAAAAAAAAAL29vv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2B9vb7%2FAAAAAAAAAAC9vb7%2F%2F%2F%2F%2F%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP96enz%2Fenp8%2F3p6fP%2F%2F%2F%2F%2F%2Fvb2%2B%2FwAAAAAAAAAAvb2%2B%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F729vv8AAAAAAAAAAAAAAAC9vb7%2F%2F%2F%2F%2F%2F3p6fP96enz%2Fenp8%2F%2F%2F%2F%2F%2F%2B9vb7%2Fvb2%2B%2F729vv%2B9vb7%2Fvb2%2B%2F729vv8AAAAAAAAAAAAAAAAAAAAAvb2%2B%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2Fvb2%2B%2FwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC9vb7%2Fvb2%2B%2F729vv%2B9vb7%2Fvb2%2B%2FwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA%2F%2F8AAP%2F%2FAADAAwAAgAEAAIABAACAAQAAgAEAAIABAACAAQAAgAEAAMADAADAfwAA4P8AAP%2F%2FAAD%2F%2FwAA%2F%2F8AAA%3D%3D"
+login = "https%3A%2F%2Fwww.waffles.fm%2Fw%2Findex.php%3Ftitle%3DSpecial%253AUserLogin%26returnto%3DMain_Page"
+username = "wisemaster"
+password = "daddy123"
+userfield = ""
+passfield = ""
+loginfail = ""
+exclude = ""
+
+[torservice_2]
+name = "TvTorrents"
+match = "%2F%3Ca+href%3D%22%22+onclick%3D%22return+loadTorrent%5C%28%27%28%5B%5E%27%5D%2A%3F%29%27%2Fi"
+search = ""
+image = "data%3A%3Bbase64%2CAAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAQAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAnhAGAK0eEgCuZloAu3luAKsqIQDayscAp0U4APHs7ADaw70A2MO7AN6%2BtwDy5eMAuGNXAM7AuwCtYlYAyp%2BcAKVlWADPubIAvVFIAODc2wC9g34Asm1iAMBjXAC%2FWFEA8%2FPyAPfX0QCzWU8AwKKZAL9jWADuzcgA%2FPn4AKxMPgDo3t0AtFlNAMublwDg398A3cjBAN7W0wDw5uIAvHhtANqyqgCjEQYAoSwfAPvs6gDv0s0A4b%2B4AP7%2B%2FgDi1tQAxF9XAPz8%2FADKq6QA6%2BXkAOLNygC9PjUAwqWcAKdZTgDQr6cAyLCpAKttYwC1LSMAyqmhANCmnQDu3toA6d%2FfANOvpwDj1M8A3dPTAJk1LACrKiAAvouBAMJORQD%2B%2F%2F8Ar1JGAMSvqQD6%2B%2FsAsS4jAPb39wDPubEAsnZrAKpeUgC3ioEA9O7rAPPTzwDz6uoAqh0SAO%2Fo5gC1ZloA%2B%2Fn5ALJJPADy4d8A9%2FX1APPa1gDOnJIAu0tCAPn19ADx3dsAspKKAOne3QDz1tMA49jXAMteVgC4RTwA8dvYAKQRBgDFT0YAmhAGAPLr6gD%2B%2Fv0Az8bDAKIfFQC8a18ArB4SAIkQBgD739wAxI2JAMq%2BuwCYUkgAy2hhAN%2FJwwDEoZoAszsxALplWgDv5eEAtnxxAMqnnQC5PTQAwIeCAO3Y1QD%2F%2F%2F8Ax5SQAP39%2FQCoHRIA%2B%2Fv7AKBvZQD5%2BfkAsSwiAPf39wD19fUApSkgANOpoADGr6cAsYR6APv5%2BADDq6QA8N%2FcAMyYjwDo2dQA5r63AI0uIwDJXlYA7evqAP75%2BACjHBEA7eLgAOzi3wDBnpUAsjguAP7%2B%2FwCxh34Au5iPAPjx7wCrX1MAv4R%2FALaJgAC9gn0AuWdeAPz6%2BgCvaF4A%2BuHdAPPi4ADy2dUAAAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACbdCQAAAAAfW0AAAAAAAAhPZSgZGJiMIxhQ2JAAAClagdTUAFoKiseXXEqbgAAf5kgY6KEAnBXchqVVUUAAHMFSasPiDxMPqlcT4udAACCeSJgA342WYApMy5EZgAAI14NWqhHaSgsBHxnOBMAABAYbwwWZZY5qhsdNZIxAFafdRFUOxd6mkEXdngtpgAKNKE%2FmJyGjl%2BkFaNRkUYAQjqQDhSXW6d3JgAAkwYLAAAAACclTo1KNxkAAAAcEgAAAAAAAAAAAHsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP%2F%2FAAD%2F%2FwAA488AAMABAACAAQAAgAEAAIABAACAAQAAgAEAAIABAAAAAQAAAAEAAAAxAADgOQAA%2F38AAP%2F%2FAAA%3D"
+login = "http%3A%2F%2Ftvtorrents.com%2F"
+username = "wisemaster"
+password = "Th1s1smyp455"
+userfield = ""
+passfield = ""
+loginfail = ""
+exclude = ""
